--- a/index.html
+++ b/index.html
@@ -27,82 +27,83 @@
             <ul>
                 <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
                 <li class="header__nav-item"><a href="products.html" class="header__nav-link">Productos</a></li>
-                <li class="header__nav-item"><a href="#contacto" class="header__nav-link">Nosotros</a></li>
-                <li class="header__nav-item"><a href="#contacto" class="header__nav-link">Blog</a></li>
+                <li class="header__nav-item"><a href="about.html" class="header__nav-link">Nosotros</a></li>
+                <li class="header__nav-item"><a href="blog.html" class="header__nav-link">Blog</a></li>
             </ul>
         </nav>
     </header>
     <main class="main">
-        <section class="main__brand">
-            <div class="main__brand-dogs">
-                <div class="main__brand-dogs-wrapper">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
-                  <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
-                </div>
-            </div>
-            <img class="main__brand-logo" src="assets/logo/logo2.png" alt="Logo">
-        </section>
-        <section class="main__products">
-          <h1 class="products__title">Nuestras categorías</h1>
-          <div class="products__list">
-            <article class="product">
-              <img class="product__image" src="assets/categorias/salchicha-w.png" alt="Artículo 3">
-              <h3 class="product__category">Disfraces</h3>
-            </article>
-            <article class="product">
-              <img class="product__image" src="assets/categorias/borreguito2-w.png" alt="Artículo 3">
-              <h3 class="product__category">Abrigos</h3>
-            </article>
-            <article class="product">
-              <img class="product__image" src="assets/categorias/sudadera2-w.png" alt="Artículo 3">
-              <h3 class="product__category">Sudaderas</h3>
-            </article>
-            <article class="product">
-              <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
-              <h3 class="product__category">Accesorios</h3>
-            </article>
-            <article class="product">
-              <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
-              <h3 class="product__category">Accesorios</h3>
-            </article>
-            <article class="product">
-              <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
-              <h3 class="product__category">Accesorios</h3>
-            </article>
-          </div>
-        </section>
-        <section class="main__newsletter">
-            <div class="newsletter__left">
-              <img class="newsletter__image" src="assets/newsletter/cat-newsletter.png" alt="Logo">
-              <div class="newsletter__benefits">
-                <h1 class="newsletter__title">Paw News</h1>
-                <h3 class="newsletter__subtitle">Lo mejor para tu mascota</h3>
-                <ul class="newsletter__list">
-                  <li class="newsletter__item"><i class="fas fa-paw"></i>Énterate de nuestras novedades</li>
-                  <li class="newsletter__item"><i class="fas fa-paw"></i>Tips para mimar a tu mascota</li>
-                  <li class="newsletter__item"><i class="fas fa-paw"></i>Descuentos irresistibles</li>
-                  <li class="newsletter__item"><i class="fas fa-paw"></i>Noticias frescas y peludas</li>
-                </ul>
+      <section class="main__brand">
+          <div class="main__brand-dogs">
+              <div class="main__brand-dogs-wrapper">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
               </div>
+          </div>
+          <img class="main__brand-logo" src="assets/logo/logo2.png" alt="Logo">
+      </section>
+      <section class="about-store">
+        <header class="about-store__content">
+            <h2 class="about-store__title">¡Bienvenidos a nuestra tienda de productos para perros!</h2>
+            <p class="about-store__description">
+                En nuestra tienda, nos dedicamos a ofrecer los mejores accesorios, ropa y productos especializados para tu mascota. Con un enfoque en la calidad, la comodidad y el estilo, nuestros productos están diseñados para hacer feliz a tu compañero de cuatro patas.
+            </p>
+            
+            <section class="about-store__features">
+                <article class="feature">
+                    <h2>Gran variedad de productos</h2>
+                    <p>Descubre todo lo que necesitas para consentir a tu mejor amigo peludo. Desde cómodos abrigos hasta originales accesorios, ¡tenemos algo para cada estilo y ocasión!</p>
+                    <img src="assets/miscelanea/main__index/thumbsup-w.png" alt="Variedad de productos">
+                </article>
+                <article class="feature">
+                    <h2>Productos de alta calidad</h2>
+                    <p>Nos aseguramos de que cada prenda y accesorio esté hecho con materiales resistentes y cómodos para tu perro. Porque ellos también merecen lo mejor.</p>
+                    <img src="assets/miscelanea/main__index/dressed-w.png" alt="Alta calidad">
+                </article>
+                <article class="feature">
+                    <h2>Envíos rápidos y seguros</h2>
+                    <p>Recibe tus pedidos en tiempo récord, directamente en tu puerta. Nos encargamos de que todo llegue en perfectas condiciones, para que solo te preocupes de disfrutar junto a tu peludo.</p>
+                    <img src="assets/miscelanea/main__index/delivery-w.png" alt="Envíos rápidos">
+                </article>
+            </section>
+            <a href="productos.html" class="about-store__cta">Descubre nuestros productos</a>
+        </header>
+        <figure class="about-store__image">
+            <img src="assets/images/store.jpg" alt="Tienda">
+        </figure>
+      </section>
+      <section class="main__newsletter">
+          <div class="newsletter__left">
+            <img class="newsletter__image" src="assets/newsletter/cat-newsletter.png" alt="Logo">
+            <div class="newsletter__benefits">
+              <h1 class="newsletter__title">Paw News</h1>
+              <h3 class="newsletter__subtitle">Lo mejor para tu mascota</h3>
+              <ul class="newsletter__list">
+                <li class="newsletter__item"><i class="fas fa-paw"></i>Énterate de nuestras novedades</li>
+                <li class="newsletter__item"><i class="fas fa-paw"></i>Tips para mimar a tu mascota</li>
+                <li class="newsletter__item"><i class="fas fa-paw"></i>Descuentos irresistibles</li>
+                <li class="newsletter__item"><i class="fas fa-paw"></i>Noticias frescas y peludas</li>
+              </ul>
             </div>
-            <div class="newsletter__right">
-              <form class="newsletter__form">
-                  <input class="newsletter__input" type="email" name="email" placeholder="Dirección de e-mail" required>
-                  <button class="newsletter__button" type="submit">Regístrate</button>
-              </form>
-              <p class="newsletter__disclaimer">Al registrarte, aceptas recibir nuestras novedades, ofertas y actualizaciones por correo electrónico. Puedes cancelar tu suscripción en cualquier momento.</p>
-            </div>
-        </section>
+          </div>
+          <div class="newsletter__right">
+            <form class="newsletter__form">
+                <input class="newsletter__input" type="email" name="email" placeholder="Dirección de e-mail" required>
+                <button class="newsletter__button" type="submit">Regístrate</button>
+            </form>
+            <p class="newsletter__disclaimer">Al registrarte, aceptas recibir nuestras novedades, ofertas y actualizaciones por correo electrónico. Puedes cancelar tu suscripción en cualquier momento.</p>
+          </div>
+      </section>
     </main>
     <footer class="footer">
         <div class="footer__socials">
