--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
       <section class="about-store">
         <header class="about-store__content">
-            <h2 class="about-store__title">¡Bienvenidos a nuestra tienda de productos para perros!</h2>
+            <h2 class="about-store__title">¡Bienvenid<i class="fas fa-paw welcomed"></i>!</h2>
             <p class="about-store__description">
                 En nuestra tienda, nos dedicamos a ofrecer los mejores accesorios, ropa y productos especializados para tu mascota. Con un enfoque en la calidad, la comodidad y el estilo, nuestros productos están diseñados para hacer feliz a tu compañero de cuatro patas.
             </p>
