"Terminar adopciones y validar"

--- a/about.html
+++ b/about.html
@@ -43,7 +43,39 @@
             </iframe>
         </section>
         <section class="main__faq">
-            <p>es como FAQ :</p>
+            <section class="main__faq">
+                <p class="faq__title">es como FAQ:</p>
+                <div class="faq__item">
+                    <details class="faq__details">
+                        <summary class="faq__question">¿Cómo sé qué talla necesita mi perro?</summary>
+                        <p class="faq__answer">Mide el contorno del pecho, el cuello y la longitud de la espalda de tu perro. Consulta nuestra tabla de tallas para encontrar la mejor opción.</p>
+                    </details>
+                </div>
+                <div class="faq__item">
+                    <details class="faq__details">
+                        <summary class="faq__question">¿Qué materiales utilizan para la ropa?</summary>
+                        <p class="faq__answer">Utilizamos materiales suaves y seguros para la piel de los perros, como algodón hipoalergénico y lana para climas fríos.</p>
+                    </details>
+                </div>
+                <div class="faq__item">
+                    <details class="faq__details">
+                        <summary class="faq__question">¿La ropa es apta para lavar en lavadora?</summary>
+                        <p class="faq__answer">Sí, nuestras prendas son aptas para lavadora en ciclo suave. Consulta las instrucciones específicas de cada producto.</p>
+                    </details>
+                </div>
+                <div class="faq__item">
+                    <details class="faq__details">
+                        <summary class="faq__question">¿Puedo devolver o cambiar un producto si no le queda bien a mi perro?</summary>
+                        <p class="faq__answer">¡Claro! Ofrecemos cambios y devoluciones dentro de los primeros 30 días desde la compra, siempre que el producto esté en su estado original.</p>
+                    </details>
+                </div>
+                <div class="faq__item">
+                    <details class="faq__details">
+                        <summary class="faq__question">¿Tienen ropa para todas las razas y tamaños?</summary>
+                        <p class="faq__answer">Sí, diseñamos ropa para perros de todas las razas y tamaños. Contáctanos si necesitas ayuda con el ajuste.</p>
+                    </details>
+                </div>
+            </section>
         </section>
         <section class="main__newsletter">
             <div class="newsletter__left">
