--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             
             <section class="about-store__features">
                 <article class="feature">
-                    <h2>Gran variedad de productos</h2>
+                    <h2>Variedad de productos</h2>
                     <p>Descubre todo lo que necesitas para consentir a tu mejor amigo peludo. Desde cómodos abrigos hasta originales accesorios, ¡tenemos algo para cada estilo y ocasión!</p>
                     <img src="assets/miscelanea/main__index/dressed-w.png" alt="Variedad de productos">
                 </article>
@@ -75,7 +75,7 @@
                     <img src="assets/miscelanea/main__index/delivery-w.png" alt="Envíos rápidos">
                 </article>
             </section>
-            <a href="productos.html" class="about-store__cta">Descubre nuestros productos</a>
+            <a href="products.html" class="about-store__cta">Descubre nuestros productos</a>
       </section>
       <section class="main__newsletter">
           <div class="newsletter__left">
