--- a/blog.html
+++ b/blog.html
@@ -3,34 +3,192 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta name="description" content="Tienda en línea de instrumentos musicales">
-    <meta name="keywords" content="instrumentos musicales, guitarras, teclados, percusión, tienda online"> -->
+    <meta name="description" content="Tienda en línea de instrumentos musicales">
+    <meta name="keywords" content="instrumentos musicales, guitarras, teclados, percusión, tienda online">
     <meta name="author" content="Francisco Alba Muñoz">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>Nombre de la tienda</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> <!-- Fuentes de Google para mejorar la legibilidad -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="assets/css/styles.css">
-
-    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon"> <!-- Icono que aparece en la pestaña del navegador -->
-
+    <title>Pawfect Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/9c080e9c6cab37228b6efdfd9fb6e2f9?family=Railey-PersonalUse" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/218b422903.js" crossorigin="anonymous"></script>
-
     <meta name="robots" content="index, follow">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class= "header__background"></div>
+        <a href="/" class="header__logo-link">
+          <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
+        </a>
+        <nav class="header__nav">
+            <ul>
+                <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
+                <li class="header__nav-item"><a href="products.html" class="header__nav-link">Productos</a></li>
+                <li class="header__nav-item"><a href="about.html" class="header__nav-link">Nosotros</a></li>
+                <li class="header__nav-item"><a href="blog.html" class="header__nav-link">Blog</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-
+    <main class="main">
+        <section class="main__community__join">
+          <h2 class="main__community__title">Pawfect Community</h2>
+          <p class="main__community__description">
+            Regístrate para formar parte de nuestra comunidad. Con tu información, podremos personalizar tu experiencia, enviarte promociones exclusivas y contenido útil adaptado a tu ubicación. ¡No te lo pierdas!
+          </p>
+          <div class="main__community__container">
+            <section class="main__community__form-container">
+              <form action="#" method="post">
+                <ul class="main__community__form-list">
+                  <li class="main__community__form-item">
+                    <label for="dni"><i class="icon fa-solid fa-id-card"></i></label>
+                    <input type="text" id="dni" name="dni" placeholder="NIF/DNI" required>
+                  </li>
+                  <li class="main__community__form-item">
+                    <label for="first-name"><i class="icon fa-solid fa-user"></i></label>
+                    <input type="text" id="first-name" name="first-name" placeholder="Nombre" required>
+                  </li>
+                  <li class="main__community__form-item">
+                    <label for="last-name"><i class="icon fa-solid fa-signature"></i></label>
+                    <input type="text" id="last-name" name="last-name" placeholder="Apellidos" required>
+                  </li>
+                  <li class="main__community__form-item">
+                    <label for="address"><i class="icon fa-solid fa-location-dot"></i></label>
+                    <input type="text" id="address" name="address" placeholder="Dirección" required>
+                  </li>
+                  <li class="main__community__form-item">
+                    <label for="postal-code"><i class="icon fa-solid fa-envelopes-bulk"></i></label>
+                    <input type="text" id="postal-code" name="postal-code" placeholder="Código postal" required>
+                  </li>
+                  <li class="main__community__form-item">
+                    <label for="locality"><i class="icon fa-solid fa-city"></i></label>
+                    <input type="text" id="locality" name="locality" placeholder="Localidad" required>
+                  </li>
+                  <li class="main__community__form-item">
+                    <label for="country"><i class="icon fa-solid fa-globe"></i></label>
+                    <input type="text" id="country" name="country" placeholder="País" required>
+                  </li>
+                  <li class="main__community__form-item">
+                    <label for="email"><i class="icon fa-solid fa-envelope"></i></label>
+                    <input type="email" id="email" name="email" placeholder="Dirección e-mail" required>
+                  </li>
+                  <li class="main__community__form-options">
+                    <button class="main__community__form-button" type="submit">Registrarse</button>
+                  </li>
+                </ul>
+              </form>
+            </section>
+            <section class="main__community__portrait">
+              <img src="assets/miscelanea/blog/register-background-w.webp" alt="Mascota feliz" class="main__community__image" />
+            </section>
+          </div>
+        </section>
+        <section class="main__adoption__board">
+            <h2 class="main__adoption__title">Adopta a tu compañero ideal</h2>
+            <p class="main__adoption__description">
+              Descubre a estos adorables perros que están esperando un hogar lleno de amor. Haz clic en sus fichas para obtener más información.
+            </p>
+            <div class="main__adoption__container">
+              <article class="main__adoption__card">
+                <img src="assets/images/dogs/dog1.jpg" alt="Foto de Max" class="main__adoption__image" />
+                <div class="main__adoption__details">
+                  <h3 class="main__adoption__name">Max</h3>
+                  <p class="main__adoption__age"><strong>Edad:</strong> 2 años</p>
+                  <p class="main__adoption__breed"><strong>Raza:</strong> Labrador Retriever</p>
+                  <p class="main__adoption__size"><strong>Tamaño:</strong> Grande</p>
+                  <p class="main__adoption__activity"><strong>Nivel de actividad:</strong> Alto</p>
+                  <p class="main__adoption__special"><strong>Características especiales:</strong> Le encanta nadar y aprender trucos nuevos.</p>
+                  <p class="main__adoption__description">
+                    Max es un perro enérgico y juguetón que adora correr al aire libre y necesita una familia activa.
+                  </p>
+                </div>
+              </article>
+              <article class="main__adoption__card">
+                <img src="assets/images/dogs/dog2.jpg" alt="Foto de Luna" class="main__adoption__image" />
+                <div class="main__adoption__details">
+                  <h3 class="main__adoption__name">Luna</h3>
+                  <p class="main__adoption__age"><strong>Edad:</strong> 4 años</p>
+                  <p class="main__adoption__breed"><strong>Raza:</strong> Golden Retriever</p>
+                  <p class="main__adoption__size"><strong>Tamaño:</strong> Mediano</p>
+                  <p class="main__adoption__activity"><strong>Nivel de actividad:</strong> Moderado</p>
+                  <p class="main__adoption__special"><strong>Características especiales:</strong> Tranquila y cariñosa, ideal para familias con niños.</p>
+                  <p class="main__adoption__description">
+                    Luna es tranquila y cariñosa. Le encanta acurrucarse en el sofá y recibir mimos.
+                  </p>
+                </div>
+              </article>
+              <article class="main__adoption__card">
+                <img src="assets/images/dogs/dog3.jpg" alt="Foto de Toby" class="main__adoption__image" />
+                <div class="main__adoption__details">
+                  <h3 class="main__adoption__name">Toby</h3>
+                  <p class="main__adoption__age"><strong>Edad:</strong> 1 año</p>
+                  <p class="main__adoption__breed"><strong>Raza:</strong> Beagle</p>
+                  <p class="main__adoption__size"><strong>Tamaño:</strong> Pequeño</p>
+                  <p class="main__adoption__activity"><strong>Nivel de actividad:</strong> Alto</p>
+                  <p class="main__adoption__special"><strong>Características especiales:</strong> Muy curioso, necesita un hogar paciente donde pueda explorar.</p>
+                  <p class="main__adoption__description">
+                    Toby es un cachorro curioso que necesita un hogar paciente donde pueda aprender y crecer.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </section>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <div class="footer__socials">
+            <ul class="footer__socials-list">
+              <li class="footer__socials-item"><a href="https://facebook.com" target="_blank">
+                <img src="assets/social/facebook-w.png" alt="Facebook">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://instagram.com" target="_blank">
+                <img src="assets/social/instagram-w.png" alt="Instagram">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://twitter.com" target="_blank">
+                <img src="assets/social/twitter-w.png" alt="Twitter">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://tiktok.com" target="_blank">
+                <img src="assets/social/tik-tok-w.png" alt="Tik-Tok">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://pinterest.com" target="_blank">
+                <img src="assets/social/pinterest-w.png" alt="Pinterest">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://youtube.com" target="_blank">
+                <img src="assets/social/youtube-w.png" alt="Youtube">
+              </a></li>
+            </ul>
+        </div>
+        <div class="footer__links">
+            <ul class="footer__links-list">
+              <li class="footer__links-item"><a href="#">Sobre nosotros</a></li>
+              <li class="footer__links-item"><a href="#">Política de privacidad</a></li>
+              <li class="footer__links-item"><a href="#">Envío y entregas</a></li>
+              <li class="footer__links-item"><a href="#">Términos y condiciones</a></li>
+              <li class="footer__links-item"><a href="/contacto">Contáctanos</a></li>
+            </ul>
+        </div>
+        <div class="footer__apps">
+            <div class="footer__apps-list">
+                <ul class="footer__apps-items">
+                    <li class="footer__apps-item">
+                        <a class="footer__apps-link" href="https://www.apple.com/app-store/">
+                            <img class="footer__apps-image" src="assets/social/app-store-w.png" alt="App Store">
+                        </a>
+                    </li>
+                    <li class="footer__apps-item">
+                        <a class="footer__apps-link" href="https://play.google.com/">
+                            <img class="footer__apps-image" src="assets/social/play-store-w.png" alt="Google Play">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <p class="footer__copyright">
+                &copy; 2025 Pawfect. Todos los derechos reservados.
+            </p>
+            <p class="footer__slogan">
+                Pelo. Pico. Batas
+            </p>
+        </div>
     </footer>
 </body>
