--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tienda en línea de instrumentos musicales">
-    <meta name="keywords" content="instrumentos musicales, guitarras, teclados, percusión, tienda online">
+    <meta name="description" content="Tienda de ropa y accesorios para perros">
+    <meta name="keywords" content="perros, cuidado perros, ropa, accesorios, tienda online">
     <meta name="author" content="Francisco Alba Muñoz">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pawfect Store</title>
@@ -27,8 +27,8 @@
             <ul>
                 <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
                 <li class="header__nav-item"><a href="products.html" class="header__nav-link">Productos</a></li>
-                <li class="header__nav-item"><a href="#contacto" class="header__nav-link">Nosotros</a></li>
-                <li class="header__nav-item"><a href="#contacto" class="header__nav-link">Blog</a></li>
+                <li class="header__nav-item"><a href="about.html" class="header__nav-link">Nosotros</a></li>
+                <li class="header__nav-item"><a href="blog.html" class="header__nav-link">Blog</a></li>
             </ul>
         </nav>
     </header>
@@ -44,7 +44,7 @@
         </section>
         <section class="main__faq">
             <section class="main__faq">
-                <p class="faq__title">es como FAQ:</p>
+                <p class="faq__title">FAQ:</p>
                 <div class="faq__item">
                     <details class="faq__details">
                         <summary class="faq__question">¿Cómo sé qué talla necesita mi perro?</summary>
