--- a/products.html
+++ b/products.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tienda en línea de instrumentos musicales">
-    <meta name="keywords" content="instrumentos musicales, guitarras, teclados, percusión, tienda online">
+    <meta name="description" content="Tienda de ropa y accesorios para perros">
+    <meta name="keywords" content="perros, cuidado perros, ropa, accesorios, tienda online">
     <meta name="author" content="Francisco Alba Muñoz">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pawfect Store</title>
@@ -21,7 +21,7 @@
     <header class="header">
         <div class= "header__background"></div>
         <a href="/" class="header__logo-link">
-          <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
+            <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
         </a>
         <nav class="header__nav">
             <ul>
@@ -36,33 +36,33 @@
         <section class="main__products">
             <h1 class="products__title">Nuestras categorías</h1>
             <div class="products__list">
-              <article class="product">
+                <article class="product">
                 <img class="product__image" src="assets/categorias/salchicha-w.png" alt="Disfraces">
                 <h3 class="product__category">Disfraces</h3>
-              </article>
-              <article class="product">
+                </article>
+                <article class="product">
                 <img class="product__image" src="assets/categorias/borreguito2-w.png" alt="Abrigos">
                 <h3 class="product__category">Abrigos</h3>
-              </article>
-              <article class="product">
+                </article>
+                <article class="product">
                 <img class="product__image" src="assets/categorias/sudadera2-w.png" alt="Sudaderas">
                 <h3 class="product__category">Sudaderas</h3>
-              </article>
-              <article class="product">
+                </article>
+                <article class="product">
                 <img class="product__image" src="assets/categorias/pijama-w.png" alt="Pijamas">
                 <h3 class="product__category">Pijamas</h3>
-              </article>
-              <article class="product">
+                </article>
+                <article class="product">
                 <img class="product__image" src="assets/categorias/bolso2-w.png" alt="Bolsos">
                 <h3 class="product__category">Bolsos</h3>
-              </article>
-              <article class="product">
+                </article>
+                <article class="product">
                 <img class="product__image" src="assets/categorias/collar2-w.png" alt="Accesorios">
                 <h3 class="product__category">Accesorios</h3>
-              </article>
+                </article>
             </div>
-          </section>
-          <section class="main__featured featured">
+            </section>
+            <section class="main__featured featured">
             <h2 class="featured__title">Novedades</h2>
             <div class="featured__list">
                 <article class="featured__item product">
@@ -122,7 +122,7 @@
                 </article>
             </div>
         </section>
-          <section class="main__sizes">
+            <section class="main__sizes">
             <h3 class="sizes__title">¡Elije su talla!</h3>
             <div class="sizes__table-wrapper--default">
                 <table class="sizes__table">
@@ -268,33 +268,33 @@
     <footer class="footer">
         <div class="footer__socials">
             <ul class="footer__socials-list">
-              <li class="footer__socials-item"><a href="https://facebook.com" target="_blank">
+                <li class="footer__socials-item"><a href="https://facebook.com" target="_blank">
                 <img src="assets/social/facebook-w.png" alt="Facebook">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://instagram.com" target="_blank">
+                </a></li>
+                <li class="footer__socials-item"><a href="https://instagram.com" target="_blank">
                 <img src="assets/social/instagram-w.png" alt="Instagram">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://twitter.com" target="_blank">
+                </a></li>
+                <li class="footer__socials-item"><a href="https://twitter.com" target="_blank">
                 <img src="assets/social/twitter-w.png" alt="Twitter">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://tiktok.com" target="_blank">
+                </a></li>
+                <li class="footer__socials-item"><a href="https://tiktok.com" target="_blank">
                 <img src="assets/social/tik-tok-w.png" alt="Tik-Tok">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://pinterest.com" target="_blank">
+                </a></li>
+                <li class="footer__socials-item"><a href="https://pinterest.com" target="_blank">
                 <img src="assets/social/pinterest-w.png" alt="Pinterest">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://youtube.com" target="_blank">
+                </a></li>
+                <li class="footer__socials-item"><a href="https://youtube.com" target="_blank">
                 <img src="assets/social/youtube-w.png" alt="Youtube">
-              </a></li>
+                </a></li>
             </ul>
         </div>
         <div class="footer__links">
             <ul class="footer__links-list">
-              <li class="footer__links-item"><a href="#">Sobre nosotros</a></li>
-              <li class="footer__links-item"><a href="#">Política de privacidad</a></li>
-              <li class="footer__links-item"><a href="#">Envío y entregas</a></li>
-              <li class="footer__links-item"><a href="#">Términos y condiciones</a></li>
-              <li class="footer__links-item"><a href="/contacto">Contáctanos</a></li>
+                <li class="footer__links-item"><a href="#">Sobre nosotros</a></li>
+                <li class="footer__links-item"><a href="#">Política de privacidad</a></li>
+                <li class="footer__links-item"><a href="#">Envío y entregas</a></li>
+                <li class="footer__links-item"><a href="#">Términos y condiciones</a></li>
+                <li class="footer__links-item"><a href="/contacto">Contáctanos</a></li>
             </ul>
         </div>
         <div class="footer__apps">
@@ -321,3 +321,4 @@
         </div>
     </footer>
 </body>
+</html>
