--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tienda en línea de instrumentos musicales">
-    <meta name="keywords" content="instrumentos musicales, guitarras, teclados, percusión, tienda online">
+    <meta name="description" content="Tienda de ropa y accesorios para perros">
+    <meta name="keywords" content="perros, cuidado perros, ropa, accesorios, tienda online">
     <meta name="author" content="Francisco Alba Muñoz">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pawfect Store</title>
@@ -18,141 +18,141 @@
     <meta name="robots" content="index, follow">
 </head>
 <body>
-    <header class="header">
-        <div class= "header__background"></div>
-        <a href="/" class="header__logo-link">
-          <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
-        </a>
-        <nav class="header__nav">
-            <ul>
-                <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
-                <li class="header__nav-item"><a href="products.html" class="header__nav-link">Productos</a></li>
-                <li class="header__nav-item"><a href="about.html" class="header__nav-link">Nosotros</a></li>
-                <li class="header__nav-item"><a href="blog.html" class="header__nav-link">Blog</a></li>
+  <header class="header">
+      <div class= "header__background"></div>
+      <a href="/" class="header__logo-link">
+        <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
+      </a>
+      <nav class="header__nav">
+          <ul>
+              <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
+              <li class="header__nav-item"><a href="products.html" class="header__nav-link">Productos</a></li>
+              <li class="header__nav-item"><a href="about.html" class="header__nav-link">Nosotros</a></li>
+              <li class="header__nav-item"><a href="blog.html" class="header__nav-link">Blog</a></li>
+          </ul>
+      </nav>
+  </header>
+  <main class="main">
+    <section class="main__brand">
+        <div class="main__brand-dogs">
+            <div class="main__brand-dogs-wrapper">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+              <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
+            </div>
+        </div>
+        <img class="main__brand-logo" src="assets/logo/logo2.png" alt="Logo">
+    </section>
+    <section class="about-store">
+          <h2 class="about-store__title">¡Bienvenid<i class="fas fa-paw welcomed"></i>!</h2>
+          <p class="about-store__description">
+              En nuestra tienda, nos dedicamos a ofrecer los mejores accesorios, ropa y productos especializados para tu mascota. Con un enfoque en la calidad, la comodidad y el estilo, nuestros productos están diseñados para hacer feliz a tu compañero de cuatro patas.
+          </p>
+          <section class="about-store__features">
+              <article class="feature">
+                  <h2>Variedad de productos</h2>
+                  <p>Descubre todo lo que necesitas para consentir a tu mejor amigo peludo. Desde cómodos abrigos hasta originales accesorios, ¡tenemos algo para cada estilo y ocasión!</p>
+                  <img src="assets/miscelanea/main__index/dressed-w.png" alt="Variedad de productos">
+              </article>
+              <article class="feature">
+                  <h2>Productos de alta calidad</h2>
+                  <p>Nos aseguramos de que cada prenda y accesorio esté hecho con materiales resistentes y cómodos para tu perro. Porque ellos también merecen lo mejor.</p>
+                  <img src="assets/miscelanea/main__index/thumbsup-w.png" alt="Alta calidad">
+              </article>
+              <article class="feature">
+                  <h2>Envíos rápidos y seguros</h2>
+                  <p>Recibe tus pedidos en tiempo récord, directamente en tu puerta. Nos encargamos de que todo llegue en perfectas condiciones, para que solo te preocupes de disfrutar junto a tu peludo.</p>
+                  <img src="assets/miscelanea/main__index/delivery-w.png" alt="Envíos rápidos">
+              </article>
+          </section>
+          <a href="products.html" class="about-store__cta">Descubre nuestros productos</a>
+    </section>
+    <section class="main__newsletter">
+        <div class="newsletter__left">
+          <img class="newsletter__image" src="assets/newsletter/cat-newsletter.png" alt="Logo">
+          <div class="newsletter__benefits">
+            <h1 class="newsletter__title">Paw News</h1>
+            <h3 class="newsletter__subtitle">Lo mejor para tu mascota</h3>
+            <ul class="newsletter__list">
+              <li class="newsletter__item"><i class="fas fa-paw"></i>Énterate de nuestras novedades</li>
+              <li class="newsletter__item"><i class="fas fa-paw"></i>Tips para mimar a tu mascota</li>
+              <li class="newsletter__item"><i class="fas fa-paw"></i>Descuentos irresistibles</li>
+              <li class="newsletter__item"><i class="fas fa-paw"></i>Noticias frescas y peludas</li>
             </ul>
-        </nav>
-    </header>
-    <main class="main">
-      <section class="main__brand">
-          <div class="main__brand-dogs">
-              <div class="main__brand-dogs-wrapper">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
-                <img class="main__brand-dog" src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
-              </div>
           </div>
-          <img class="main__brand-logo" src="assets/logo/logo2.png" alt="Logo">
-      </section>
-      <section class="about-store">
-            <h2 class="about-store__title">¡Bienvenid<i class="fas fa-paw welcomed"></i>!</h2>
-            <p class="about-store__description">
-                En nuestra tienda, nos dedicamos a ofrecer los mejores accesorios, ropa y productos especializados para tu mascota. Con un enfoque en la calidad, la comodidad y el estilo, nuestros productos están diseñados para hacer feliz a tu compañero de cuatro patas.
-            </p>
-            
-            <section class="about-store__features">
-                <article class="feature">
-                    <h2>Variedad de productos</h2>
-                    <p>Descubre todo lo que necesitas para consentir a tu mejor amigo peludo. Desde cómodos abrigos hasta originales accesorios, ¡tenemos algo para cada estilo y ocasión!</p>
-                    <img src="assets/miscelanea/main__index/dressed-w.png" alt="Variedad de productos">
-                </article>
-                <article class="feature">
-                    <h2>Productos de alta calidad</h2>
-                    <p>Nos aseguramos de que cada prenda y accesorio esté hecho con materiales resistentes y cómodos para tu perro. Porque ellos también merecen lo mejor.</p>
-                    <img src="assets/miscelanea/main__index/thumbsup-w.png" alt="Alta calidad">
-                </article>
-                <article class="feature">
-                    <h2>Envíos rápidos y seguros</h2>
-                    <p>Recibe tus pedidos en tiempo récord, directamente en tu puerta. Nos encargamos de que todo llegue en perfectas condiciones, para que solo te preocupes de disfrutar junto a tu peludo.</p>
-                    <img src="assets/miscelanea/main__index/delivery-w.png" alt="Envíos rápidos">
-                </article>
-            </section>
-            <a href="products.html" class="about-store__cta">Descubre nuestros productos</a>
-      </section>
-      <section class="main__newsletter">
-          <div class="newsletter__left">
-            <img class="newsletter__image" src="assets/newsletter/cat-newsletter.png" alt="Logo">
-            <div class="newsletter__benefits">
-              <h1 class="newsletter__title">Paw News</h1>
-              <h3 class="newsletter__subtitle">Lo mejor para tu mascota</h3>
-              <ul class="newsletter__list">
-                <li class="newsletter__item"><i class="fas fa-paw"></i>Énterate de nuestras novedades</li>
-                <li class="newsletter__item"><i class="fas fa-paw"></i>Tips para mimar a tu mascota</li>
-                <li class="newsletter__item"><i class="fas fa-paw"></i>Descuentos irresistibles</li>
-                <li class="newsletter__item"><i class="fas fa-paw"></i>Noticias frescas y peludas</li>
+        </div>
+        <div class="newsletter__right">
+          <form class="newsletter__form">
+              <input class="newsletter__input" type="email" name="email" placeholder="Dirección de e-mail" required>
+              <button class="newsletter__button" type="submit">Regístrate</button>
+          </form>
+          <p class="newsletter__disclaimer">Al registrarte, aceptas recibir nuestras novedades, ofertas y actualizaciones por correo electrónico. Puedes cancelar tu suscripción en cualquier momento.</p>
+        </div>
+    </section>
+  </main>
+  <footer class="footer">
+      <div class="footer__socials">
+          <ul class="footer__socials-list">
+            <li class="footer__socials-item"><a href="https://facebook.com" target="_blank">
+              <img src="assets/social/facebook-w.png" alt="Facebook">
+            </a></li>
+            <li class="footer__socials-item"><a href="https://instagram.com" target="_blank">
+              <img src="assets/social/instagram-w.png" alt="Instagram">
+            </a></li>
+            <li class="footer__socials-item"><a href="https://twitter.com" target="_blank">
+              <img src="assets/social/twitter-w.png" alt="Twitter">
+            </a></li>
+            <li class="footer__socials-item"><a href="https://tiktok.com" target="_blank">
+              <img src="assets/social/tik-tok-w.png" alt="Tik-Tok">
+            </a></li>
+            <li class="footer__socials-item"><a href="https://pinterest.com" target="_blank">
+              <img src="assets/social/pinterest-w.png" alt="Pinterest">
+            </a></li>
+            <li class="footer__socials-item"><a href="https://youtube.com" target="_blank">
+              <img src="assets/social/youtube-w.png" alt="Youtube">
+            </a></li>
+          </ul>
+      </div>
+      <div class="footer__links">
+          <ul class="footer__links-list">
+            <li class="footer__links-item"><a href="#">Sobre nosotros</a></li>
+            <li class="footer__links-item"><a href="#">Política de privacidad</a></li>
+            <li class="footer__links-item"><a href="#">Envío y entregas</a></li>
+            <li class="footer__links-item"><a href="#">Términos y condiciones</a></li>
+            <li class="footer__links-item"><a href="#">Contáctanos</a></li>
+          </ul>
+      </div>
+      <div class="footer__apps">
+          <div class="footer__apps-list">
+              <ul class="footer__apps-items">
+                  <li class="footer__apps-item">
+                      <a class="footer__apps-link" href="https://www.apple.com/app-store/">
+                          <img class="footer__apps-image" src="assets/social/app-store-w.png" alt="App Store">
+                      </a>
+                  </li>
+                  <li class="footer__apps-item">
+                      <a class="footer__apps-link" href="https://play.google.com/">
+                          <img class="footer__apps-image" src="assets/social/play-store-w.png" alt="Google Play">
+                      </a>
+                  </li>
               </ul>
-            </div>
           </div>
-          <div class="newsletter__right">
-            <form class="newsletter__form">
-                <input class="newsletter__input" type="email" name="email" placeholder="Dirección de e-mail" required>
-                <button class="newsletter__button" type="submit">Regístrate</button>
-            </form>
-            <p class="newsletter__disclaimer">Al registrarte, aceptas recibir nuestras novedades, ofertas y actualizaciones por correo electrónico. Puedes cancelar tu suscripción en cualquier momento.</p>
-          </div>
-      </section>
-    </main>
-    <footer class="footer">
-        <div class="footer__socials">
-            <ul class="footer__socials-list">
-              <li class="footer__socials-item"><a href="https://facebook.com" target="_blank">
-                <img src="assets/social/facebook-w.png" alt="Facebook">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://instagram.com" target="_blank">
-                <img src="assets/social/instagram-w.png" alt="Instagram">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://twitter.com" target="_blank">
-                <img src="assets/social/twitter-w.png" alt="Twitter">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://tiktok.com" target="_blank">
-                <img src="assets/social/tik-tok-w.png" alt="Tik-Tok">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://pinterest.com" target="_blank">
-                <img src="assets/social/pinterest-w.png" alt="Pinterest">
-              </a></li>
-              <li class="footer__socials-item"><a href="https://youtube.com" target="_blank">
-                <img src="assets/social/youtube-w.png" alt="Youtube">
-              </a></li>
-            </ul>
-        </div>
-        <div class="footer__links">
-            <ul class="footer__links-list">
-              <li class="footer__links-item"><a href="#">Sobre nosotros</a></li>
-              <li class="footer__links-item"><a href="#">Política de privacidad</a></li>
-              <li class="footer__links-item"><a href="#">Envío y entregas</a></li>
-              <li class="footer__links-item"><a href="#">Términos y condiciones</a></li>
-              <li class="footer__links-item"><a href="/contacto">Contáctanos</a></li>
-            </ul>
-        </div>
-        <div class="footer__apps">
-            <div class="footer__apps-list">
-                <ul class="footer__apps-items">
-                    <li class="footer__apps-item">
-                        <a class="footer__apps-link" href="https://www.apple.com/app-store/">
-                            <img class="footer__apps-image" src="assets/social/app-store-w.png" alt="App Store">
-                        </a>
-                    </li>
-                    <li class="footer__apps-item">
-                        <a class="footer__apps-link" href="https://play.google.com/">
-                            <img class="footer__apps-image" src="assets/social/play-store-w.png" alt="Google Play">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <p class="footer__copyright">
-                &copy; 2025 Pawfect. Todos los derechos reservados.
-            </p>
-            <p class="footer__slogan">
-                Pelo. Pico. Batas
-            </p>
-        </div>
-    </footer>
+          <p class="footer__copyright">
+              &copy; 2025 Pawfect. Todos los derechos reservados.
+          </p>
+          <p class="footer__slogan">
+              Pelo. Pico. Batas
+          </p>
+      </div>
+  </footer>
 </body>
+</html>
