--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="header">
       <div class= "header__background"></div>
       <a href="/" class="header__logo-link">
-        <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
+        <img id="logo" class="header__logo" src="assets/logo/logo2.png" alt="Logo">
       </a>
       <nav class="header__nav">
           <ul>
@@ -155,4 +155,5 @@
       </div>
   </footer>
 </body>
+<script src="js/script.js" defer></script>
 </html>
