"Quito el hover del Header y añado modo oscuro"

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
       <a href="/" class="header__logo-link">
         <img id="logo" class="header__logo" src="assets/logo/logo2.png" alt="Logo">
       </a>
+
+      <div class="toggle-container">
+        <label class="switch">
+          <input type="checkbox" id="darkModeToggle">
+          <span class="slider"></span>
+        </label>
+        <span class="toggle-label">
+          <i class="fas fa-sun"></i>
+        </span>
+      </div>
+
       <nav class="header__nav">
           <ul>
               <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
