"Añado 3 funcionalidades. Subo código"

--- a/products.html
+++ b/products.html
@@ -36,35 +36,44 @@
         <section class="main__products">
             <h1 class="products__title">Nuestras categorías</h1>
             <div class="products__list">
+
                 <article class="product">
                 <img class="product__image" src="assets/categorias/salchicha-w.png" alt="Disfraces">
                 <h3 class="product__category">Disfraces</h3>
                 </article>
+
                 <article class="product">
                 <img class="product__image" src="assets/categorias/borreguito2-w.png" alt="Abrigos">
                 <h3 class="product__category">Abrigos</h3>
                 </article>
+
                 <article class="product">
                 <img class="product__image" src="assets/categorias/sudadera2-w.png" alt="Sudaderas">
                 <h3 class="product__category">Sudaderas</h3>
                 </article>
+
                 <article class="product">
                 <img class="product__image" src="assets/categorias/pijama-w.png" alt="Pijamas">
                 <h3 class="product__category">Pijamas</h3>
+                
                 </article>
+
                 <article class="product">
                 <img class="product__image" src="assets/categorias/bolso2-w.png" alt="Bolsos">
                 <h3 class="product__category">Bolsos</h3>
                 </article>
+
                 <article class="product">
                 <img class="product__image" src="assets/categorias/collar2-w.png" alt="Accesorios">
                 <h3 class="product__category">Accesorios</h3>
                 </article>
+
             </div>
             </section>
             <section class="main__featured featured">
             <h2 class="featured__title">Novedades</h2>
             <div class="featured__list">
+
                 <article class="featured__item product">
                     <img class="product__image" src="assets/novedades/bag-galgo.png" alt="Fender Flea Sig Bass RDWRN SHP">
                     <p class="product__rating">
@@ -78,7 +87,14 @@
                     </p>
                     <a class="product__name" href="#">Bolso Paws - Azul</a>
                     <p class="product__price">74.90 €</p>
+
+                    <div class="product__gallery">
+                        <img src="assets/novedades/bag-galgo.png" alt="Disfraz 1" class="gallery__thumbnail">
+                        <img src="assets/novedades/bag-galgo-2-2.png" alt="Disfraz 2" class="gallery__thumbnail">
+                        <img src="assets/novedades/bag-galgo-4-2.png" alt="Disfraz 3" class="gallery__thumbnail">
+                    </div>
                 </article>
+
                 <article class="featured__item product">
                     <img class="product__image" src="assets/novedades/collar-lab.png" alt="Arturia MiniLab 3 Blac">
                     <p class="product__rating">
@@ -91,7 +107,14 @@
                     </p>
                     <a class="product__name" href="#">Collar Lazos - Salmón</a>
                     <p class="product__price">25.90 €</p>
+
+                    <div class="product__gallery">
+                        <img src="assets/novedades/collar-lab.png" alt="Disfraz 1" class="gallery__thumbnail">
+                        <img src="assets/novedades/collar-lab-2-2.png" alt="Disfraz 2" class="gallery__thumbnail">
+                        <img src="assets/novedades/collar-lab-3-2.png" alt="Disfraz 3" class="gallery__thumbnail">
+                    </div>
                 </article>
+
                 <article class="featured__item product">
                     <img class="product__image" src="assets/novedades/mono-galgo.png" alt="Sennheiser HD 650">
                     <p class="product__rating">
@@ -105,7 +128,14 @@
                     </p>
                     <a class="product__name" href="#">Mono rayas - Flamenco</a>
                     <p class="product__price">59,95 €</p>
+
+                    <div class="product__gallery">
+                        <img src="assets/novedades/mono-galgo.png" alt="Disfraz 1" class="gallery__thumbnail">
+                        <img src="assets/novedades/mono-galgo-2-2.png" alt="Disfraz 2" class="gallery__thumbnail">
+                        <img src="assets/novedades/mono-galgo-3-2.png" alt="Disfraz 3" class="gallery__thumbnail">
+                    </div>
                 </article>
+
                 <article class="featured__item product">
                     <img class="product__image" src="assets/novedades/parka.png" alt="Shure SM 7 B">
                     <p class="product__rating">
@@ -119,6 +149,12 @@
                     </p>
                     <a class="product__name" href="#">Parka reversible - Lila / Verde</a>
                     <p class="product__price">69,95 €</p>
+
+                    <div class="product__gallery">
+                        <img src="assets/novedades/parka.png" alt="Disfraz 1" class="gallery__thumbnail">
+                        <img src="assets/novedades/parka-2-2.png" alt="Disfraz 2" class="gallery__thumbnail">
+                        <img src="assets/novedades/parka-3-2.png" alt="Disfraz 3" class="gallery__thumbnail">
+                    </div>
                 </article>
             </div>
         </section>
@@ -320,5 +356,6 @@
             </p>
         </div>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 </html>
