--- a/about.html
+++ b/about.html
@@ -155,5 +155,6 @@
             </p>
         </div>
     </footer>
-    <script src="js/script.js" defer></script>
+    <script src="./js/script.js" defer></script>
 </body>
+</html>
