--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@
           </p>
       </div>
   </footer>
+  <script src="./js/script.js" defer></script>
 </body>
-<script src="js/script.js" defer></script>
 </html>
